Style do formulário de contato

--- a/css/style.css
+++ b/css/style.css
@@ -700,37 +700,70 @@ figcaption {
     display: none;
 }
 
-.formcontato form {
+.form-contato form {
+    position: relative;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
     margin: 0rem 14rem;
-    border: 2px solid rgb(160, 156, 156);
-    border-radius: 2rem;    
+    border: 2px solid rgba(170, 170, 170, 0.267);
+    border-radius: 0.6rem;
+    background-color: #343a40;
 }
 
-.formcontato form label {
+.form-contato form label {
     font-family: 'Arial';
+    color: #c4c4c4;
+    margin: -0.5rem;
+    margin-top: 0.9rem;
 }
 
-.formcontato form input, textarea {
-    width: 70%;
+.form-contato form input, textarea {
+    width: 60%;
     padding: 0.62rem;
     margin: 0.62rem 0;
     border: 0.06rem solid rgb(119, 118, 118);
-    border-radius: 1rem;
-    text-align: center;
+    border-radius: 0.6rem;    
+    text-align: center;    
 }
 
-.formcontato form textarea {
+.form-contato form textarea {
     display: flex;
     width: 90%;
-    height: 50%;
-    padding: 0.62rem;
-    margin: 0.62rem 0;
+    height: auto;
+    min-height: 200px; /* Altura mínima */
+    height: auto; /* Ajusta conforme o conteúdo */
     border: 0.06rem solid rgb(119, 118, 118);
-    border-radius: 1rem;
-    text-align: center;
+    border-radius: 0.6rem;    
+    text-align: center;     
+}
+
+.form-contato input:user-invalid {
+    border: 2px solid red;
+    background-color: #ffe6e6;
+}
+
+.form-contato textarea:user-invalid {
+    border: 2px solid red;
+    background-color: #ffe6e6;
+}
+
+.btn-enviar {
+    border: none;
+    background-color: #3364d6;
+    color: white;
+    cursor: pointer;
+    padding: 10px 40px;
+    border-radius: 0.6rem;
+    margin-bottom: 0.5rem;
+}
+
+.btn-enviar:hover{
+    transform: scale(1.1);
+    transition: transform 0.5s ease;
+    background-color: #3364d6;
+    color: white;
 }
